# plant-generator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  bluetree.pro  documentation.tex  keymap.xml  pch.h  plant.desktop  plant.pro  treemaker.pro
editor/: .gitignore  axis.cpp  axis.h  camera.cpp  camera.h  closest.cpp  closest.h  curve_button.cpp  curve_button.h  curve_editor.cpp  curve_editor.h  editor.cpp  editor.h  file.cpp  file.h  file_export.cpp  file_export.h  file_exporter.cpp  file_exporter.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  grid.cpp  grid.h  history.cpp  history.h  keymap.cpp  keymap.h  main.cpp  objects.h  opengl_editor.cpp  opengl_editor.h  plant.cpp  plant.h  point_selection.cpp  point_selection.h  primitives.cpp  primitives.h  property_box.cpp  (+20 more)
editor/commands/: add_leaf.cpp  add_leaf.h  add_stem.cpp  add_stem.h  command.cpp  command.h  extrude_spline.cpp  extrude_spline.h  extrude_stem.cpp  extrude_stem.h  generate.cpp  generate.h  memorize_stem.cpp  memorize_stem.h  move_leaf.cpp  move_leaf.h  move_path.cpp  move_path.h  move_spline.cpp  move_spline.h  move_stem.cpp  move_stem.h  remove_spline.cpp  remove_spline.h  remove_stem.cpp  remove_stem.h  rotate_stem.cpp  rotate_stem.h  save_curve.cpp  save_curve.h  save_point_selection.cpp  save_point_selection.h  save_selection.cpp  save_selection.h  save_stem.cpp  save_stem.h  save_stem_selection.cpp  save_stem_selection.h
editor/geometry/: axes.cpp  axes.h  geometry.cpp  geometry.h  path.cpp  path.h  rotation_axes.cpp  rotation_axes.h  translation_axes.cpp  translation_axes.h
editor/graphics/: buffer.cpp  buffer.h  shader_params.cpp  shader_params.h  shared_resources.cpp  shared_resources.h  storage_buffer.cpp  storage_buffer.h  vertex_buffer.cpp  vertex_buffer.h
editor/history/: history.cpp  history.h  point_selection_state.cpp  point_selection_state.h  selection_state.h  stem_selection_state.cpp  stem_selection_state.h
editor/qt/: .gitignore  window.ui
editor/widgets/: curve_button.cpp  curve_button.h  curve_editor.cpp  curve_editor.h  curve_viewer.cpp  curve_viewer.h  definitions.h  editor.cpp  editor.h  form.cpp  form.h  generator_curve_editor.cpp  generator_curve_editor.h  generator_editor.cpp  generator_editor.h  item_delegate.h  key_editor.cpp  key_editor.h  leaf_editor.cpp  leaf_editor.h  material_editor.cpp  material_editor.h  material_viewer.cpp  material_viewer.h  mesh_editor.cpp  mesh_editor.h  mesh_viewer.cpp  mesh_viewer.h  object_editor.cpp  object_editor.h  pattern_editor.cpp  pattern_editor.h  procedural_editor.cpp  procedural_editor.h  property_box.cpp  property_box.h  property_curve_editor.cpp  property_curve_editor.h  property_editor.cpp  property_editor.h  (+9 more)
lib/: .gitignore  array.c  array.h  bluetree.c  collision.c  curve.c  curve.cpp  intersection.cpp  math.cpp  mesh_generator.cpp  mesh_generator.h  mesh_size.c  mesh_size.h  model_builder.c  model_builder.h  name_generator.cpp  name_generator.h  node.c  node.h  path.cpp  path.h  patterns.h  procedural_generator.cpp  procedural_generator.h  stem.cpp  stem.h  stem_modifier.cpp  stem_modifier.h  struct_modifier.c  struct_modifier.h  tree_data.h  tree_impl.cpp  tree_impl.h  tree_struct.c  tree_struct.h  treemaker.c  treemaker.cpp  vector.c  vector.h
lib/include/: bluetree.h  collision.h  curve.h  intersection.h  math.h  treemaker.h  types.h  vector.h
plant_generator/: Makefile  animation.cpp  animation.h  cross_section.cpp  cross_section.h  curve.cpp  curve.h  derivation.cpp  derivation.h  file.cpp  file.h  generator.cpp  generator.h  geometry.cpp  geometry.h  joint.cpp  joint.h  leaf.cpp  leaf.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  parameter_tree.cpp  parameter_tree.h  path.cpp  path.h  pattern_generator.cpp  pattern_generator.h  patterns.h  plant.cpp  plant.h  pseudo_generator.cpp  pseudo_generator.h  scene.cpp  scene.h  spline.cpp  spline.h  stem.cpp  (+12 more)
plant_generator/file/: collada.cpp  collada.h  wavefront.cpp  wavefront.h  xml_writer.cpp
plant_generator/math/: curve.cpp  curve.h  intersection.cpp  intersection.h  mat4.cpp  mat4.h  math.cpp  math.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
plant_generator/mesh/: collar.cpp  collar.h  fork.cpp  fork.h  generator.cpp  generator.h  mesh.cpp  mesh.h  util.h
plant_generator/tests/: test.cpp  (+8 more)
shaders/: basic.frag  basic.vert  flat.frag  flat.vert  line.frag  line.geom  line.vert  material.frag  model.frag  model.vert  outline.frag  outline.vert  point.frag  solid.vert
tests/: test_commands.cpp  test_math.cpp  test_mesh.cpp  test_octree.cpp  test_path.cpp  test_pool.cpp  test_ptree.cpp  test_spline.cpp  test_wind.cpp
(+4 files in other folders)
